--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
     <!--    RESPONSIVE NAVBAR STARTS -->
-    <section class=" container-fluids sticky-top">
+    <section class=" container-fluids sticky-top navigation">
         <header>
             <nav class="sticky-top">
                 <ul class="nav-bar">
